@@ -1,3 +1,5 @@
+2005/11/30 -- released version 20051130_trunk
+
 2005/11/29 -- released version 20051129_trunk
 
 2005/11/28 -- released version 20051128_trunk
